Terraform_tao_moi_EC2_va_RDS_bang_cach_tao_moi_Dependent/RDS.tf
provider "aws" {
  region = "us-east-2"
}
resource "aws_subnet" "rds_subnet" {
#vpc_id se lay id cua vpc da tao cua ec2
  vpc_id     = "vpc-094b10c1618008fce"
  cidr_block = "10.10.5.0/24"
  availability_zone = "us-east-2a"
}
resource "aws_subnet" "rds_subnet1" {
  vpc_id     = "vpc-094b10c1618008fce"
  cidr_block = "10.10.6.0/24"
  availability_zone = "us-east-2b"
}
resource "aws_security_group" "rds_sg" {
    vpc_id      = "vpc-094b10c1618008fce"
    name    = "alow_sql"
    ingress {
        protocol        = "tcp"
        from_port       = 3306
        to_port         = 3306
        cidr_blocks     = ["0.0.0.0/0"]
    }

    egress {
        from_port       = 0
        to_port         = 65535
        protocol        = "tcp"
        cidr_blocks     = ["0.0.0.0/0"]
    }
}
resource "aws_db_subnet_group" "db_subnet_group" {
    name       = "database_subnet"
    subnet_ids = [aws_subnet.rds_subnet.id, aws_subnet.rds_subnet1.id]
}
resource "aws_db_instance" "mysql" {
    identifier                = "mysql"
    allocated_storage         = 5
    backup_retention_period   = 2
    backup_window             = "01:00-01:30"
    maintenance_window        = "sun:03:00-sun:03:30"
    engine                    = "mysql"
    engine_version            = "5.7"
    instance_class            = "db.t2.micro"
    name                      = "huy_db"
    username                  = "huy"
    password                  = "Huy1701972021"
    port                      = "3306"
    db_subnet_group_name      = aws_db_subnet_group.db_subnet_group.id
    vpc_security_group_ids    = [aws_security_group.rds_sg.id]
    skip_final_snapshot       = true
    final_snapshot_identifier = "huy-final"
    publicly_accessible       = true
}
